# Aimai_Test_Env

./: .gitignore  LICENSE  README.md  TODO_LIST.txt
common/: README.md
common/common_data/: common_data.hpp
common/common_structs/: common_structs.hpp
common/shmem_channel/: shmem_channel.cpp  shmem_channel.hpp  shmem_channel.os
gdextensions/: .sconsign.dblite  README.md  SConstruct
gdextensions/src/: README.MD  register_types.cpp  register_types.hpp  register_types.os  remote_race_car.cpp  remote_race_car.hpp  remote_race_car.os
ros_pgks/install/: local_setup.sh  setup.sh
ros_pgks/install/cpp_example_nodes/lib/cpp_example_nodes/: positionAnnouncer  waveDriver
ros_pgks/install/cpp_example_nodes/share/cpp_example_nodes/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_pgks/install/cpp_example_nodes/share/cpp_example_nodes/cmake/: cpp_example_nodesConfig.cmake
ros_pgks/install/example_nodes/lib/example_nodes/: waveDriver
ros_pgks/install/example_nodes/share/example_nodes/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_pgks/install/godot_interfaces/share/godot_interfaces/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros_pgks/install/godot_interfaces/share/godot_interfaces/cmake/: ament_cmake_export_targets-extras.cmake  export_godot_interfaces__rosidl_generator_cExport.cmake  (+12 more)
ros_pgks/log/: latest_build
ros_pgks/src/cpp_example_nodes/: CMakeLists.txt
ros_pgks/src/cpp_example_nodes/src/: position_announcer.cpp  wave_driver.cpp
ros_pgks/src/example_nodes/: CMakeLists.txt
ros_pgks/src/example_nodes/src/: wave_driver.cpp
ros_pgks/src/gd_ros_bridger/: CMakeLists.txt  package.xml
ros_pgks/src/godot_interfaces/: CMakeLists.txt  README.md  package.xml
ros_pgks/src/godot_interfaces/msg/: RRCPosition.msg
(+22 files in other folders)
